--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5fc4da6bc74f071454b159227c34ea237a11060a7ffa5f00f3dae021d0ce5ab"
+  "signature": "sha256:733397f021a07b1234d8dbb84dde8ad27532def3a5a910e04274af73eab22e9e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,7 +45,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 140
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -182,7 +182,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 142
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -204,7 +204,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 143
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -215,7 +215,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 144
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -228,24 +228,31 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "with open('output/okay.txt','w') as f:\n",
-      "    f.write('\\n'.join(okay))\n",
-      "with open('output/have_to_check.txt','w') as f:\n",
-      "    f.write('\\n'.join(to_check))\n",
-      "with open('output/tokenlemmas.csv','w') as f:\n",
-      "    for t in sorted(unique_tokens.keys()):\n",
-      "        line  = \",\" # good or bad\n",
-      "        line += t+\",\" #token\n",
-      "        line += '|'.join(lemmas[t]) # possible lemma of token\n",
-      "        line += \"\\n\" \n",
-      "        f.write(line)\n",
+      "initial_run = True\n",
+      "if initial_run == True:\n",
+      "    with open('output/tocheck.csv','w') as f:\n",
+      "        for t in sorted(unique_tokens.keys()):\n",
+      "            line  = \",\" # good or bad\n",
+      "            line += t+\",\" #token\n",
+      "            line += '|'.join(lemmas[t]) # possible lemma of token\n",
+      "            line += \"\\n\" \n",
+      "            f.write(line)\n",
       "        \n",
       "                    "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 145
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
