--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:733397f021a07b1234d8dbb84dde8ad27532def3a5a910e04274af73eab22e9e"
+  "signature": "sha256:1a969ff1fcbc8b88a6188fe92ec5bd5e049a7907a104f42f9c4275a6cfa387a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,17 @@
      "source": [
       "## Description\n",
       "\n",
-      "This notebook contains code to generator a concordance for the muravvaj divaan of ghalib"
+      "This notebook contains code to generator a concordance for the muravvaj divaan of ghalib.\n",
+      "\n",
+      "Verses are taken from \"input/verses.csv\"\n",
+      "\n",
+      "The current task is to identify the proper lemma of the tokens, e.g. singular instead of plural,\n",
+      "verb infinitive instead of verb root, etc. This can partially be done computationally.\n",
+      "\n",
+      "Lemma that remain to be checked are in \"output/tocheck.csv\" The first column, if marked as 'x',\n",
+      "means that entry is okay. Checked lemma can then be entered into \"input/okay.csv\" using the\n",
+      "functions \n",
+      "\n"
      ]
     },
     {
@@ -34,18 +44,18 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "verses = {} # dictionary of verses, e.g. 001.01.0='naqsh faryaadii..'\n",
       "tokens = {} # dictionary of tokens where key is verses+.xx, e.g. 001.01.0.01 = 'naqsh'\n",
       "unique_tokens = {} # dictionary of tokens where value is their count\n",
       "lemmas = {} # dictionary of tokens where value is a list of their lemmas\n",
-      "unique_lemmas = [] # dictionary of unique lemmas"
+      "unique_lemmas = [] # dictionary of unique lemmas\n",
+      "okay_lemmas = {} # dictionary of unique tokens and lists of lemma, e."
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -56,7 +66,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "import re\n",
       "\n",
@@ -76,6 +86,25 @@
       "            if not 'x' in verse_id: # skip ones with x (not in muravvaj divan)\n",
       "                verses[verse_id] = input_string.strip()\n",
       "    return verses\n",
+      "\n",
+      "def get_okay_lemmas(inputfile='input/okay.csv'):\n",
+      "    '''\n",
+      "    Loads checked lemmas from CSV data file\n",
+      "    inputfile: name of csv file\n",
+      "    returns: checked_lemmas where checked_lemmas['token'] = [lemmas]\n",
+      "    '''\n",
+      "\n",
+      "    import csv\n",
+      "    okay_lemmas = {}\n",
+      "    with open(inputfile,'r') as csvfile:\n",
+      "        versereader = csv.reader(csvfile)\n",
+      "        for row in versereader:\n",
+      "            (status, unique_token, lemmas) = row\n",
+      "            assert status in ['','x']\n",
+      "            if status=='x':\n",
+      "                okay_lemmas[unique_token]=lemmas.split('|')\n",
+      "    return okay_lemmas\n",
+      "\n",
       "\n",
       "def get_tokens(verses):\n",
       "    '''\n",
@@ -181,8 +210,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -193,71 +221,88 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "verses = load_verses()\n",
       "tokens = get_tokens(verses)\n",
       "unique_tokens = get_unique_tokens(tokens)\n",
       "lemmas = get_lemmas(unique_tokens)\n",
-      "unique_lemmas = get_unique_lemmas(lemmas)"
+      "unique_lemmas = get_unique_lemmas(lemmas)\n",
+      "okay_lemmas = get_okay_lemmas()\n",
+      "\n",
+      "print \"Currently checked \",len(okay_lemmas),\" of \",len(unique_lemmas)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#okay, to_check = get_okay_and_to_check(unique_lemmas)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Write Output"
+      "## Update Files"
      ]
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
-      "initial_run = True\n",
-      "if initial_run == True:\n",
+      "def update_to_check():\n",
+      "    '''\n",
+      "    Writes unique tokens not contained in okay_lemmas to output/tocheck.csv\n",
+      "    '''\n",
       "    with open('output/tocheck.csv','w') as f:\n",
       "        for t in sorted(unique_tokens.keys()):\n",
-      "            line  = \",\" # good or bad\n",
+      "            if not t in okay_lemmas: # only add unchecked ones\n",
+      "                line  = \",\" # good or bad\n",
+      "                line += t+\",\" #token\n",
+      "                line += '|'.join(lemmas[t]) # possible lemma of token\n",
+      "                line += \"\\n\" \n",
+      "                f.write(line)\n",
+      "\n",
+      "def update_okay(inputfile='output/tocheck.csv'):\n",
+      "    '''\n",
+      "    Loads lemmas noted as correct from inputfile into okay_lemmas\n",
+      "    '''\n",
+      "    lemmas_to_add = get_okay_lemmas(inputfile=inputfile)\n",
+      "    for k,v in lemmas_to_add.iteritems():\n",
+      "        if k in okay_lemmas:\n",
+      "            print \"WARNING: \",k,\" found in okay_lemmas. Will override.\"\n",
+      "        okay_lemmas[k] = v\n",
+      "    \n",
+      "def write_okay(outputfile='input/okay.csv'):\n",
+      "    '''\n",
+      "    Writes okay_lemmas to outputfile, as status,token,lemma1|lemma2|lemma3\n",
+      "    '''\n",
+      "    with open(outputfile,'w') as f:\n",
+      "        for t in sorted(okay_lemmas.keys()):\n",
+      "            line  = \"x,\" # good or bad\n",
       "            line += t+\",\" #token\n",
-      "            line += '|'.join(lemmas[t]) # possible lemma of token\n",
+      "            line += '|'.join(okay_lemmas[t])\n",
       "            line += \"\\n\" \n",
       "            f.write(line)\n",
-      "        \n",
+      "\n",
+      "def update_files():\n",
+      "    '''\n",
+      "    Loads lemmas noted as correct from tocheck.csv, \n",
+      "    Writes okay_lemmas as input/okay.csv\n",
+      "    Regenerates output/tocheck.csv\n",
+      "    '''\n",
+      "    update_okay() \n",
+      "    write_okay()\n",
+      "    update_to_check()\n",
       "                    "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
+     "collapsed": true,
+     "input": [
+      "update_files()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
