--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eaa9e99691f45ce2bf88e6a6f9875820715e667cd39b0834ee0840de6a893109"
+  "signature": "sha256:00dc4ca1e76ca58b22648073263fd8d406221ad12694b9244a0da28a10cd3597"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,20 +44,19 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "verses = {} # dictionary of verses, e.g. 001.01.0='naqsh faryaadii..'\n",
       "tokens = {} # dictionary of tokens where key is verses+.xx, e.g. 001.01.0.01 = 'naqsh'\n",
       "unique_tokens = {} # dictionary of tokens where value is their count\n",
       "lemmas = {} # dictionary of tokens where value is a list of their lemmas\n",
       "unique_lemmas = [] # dictionary of unique lemmas\n",
-      "okay_lemmas = {} # dictionary of unique tokens and lists of lemma, \n",
-      "                                # e.g. okay_lemmas['rang-o-buu']=['rang','buu']"
+      "okay_lemmas = {} # dictionary of unique tokens and lists of lemma, e."
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -68,7 +67,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "import re\n",
       "\n",
@@ -208,12 +207,22 @@
       "#            else:\n",
       "#                unique_lemmas[lemma].append(t)\n",
       "    return unique_lemmas\n",
-      "\n"
+      "\n",
+      "\n",
+      "def to_check():\n",
+      "    '''\n",
+      "    Generates list of unique tokens that still need to be checked.\n",
+      "    '''\n",
+      "    out = []\n",
+      "    return [t for t in sorted(unique_tokens.keys()) if not t in okay_lemmas]\n",
+      "\n",
+      "def print_stats():\n",
+      "    print \"Currently there are \",len(okay_lemmas),\" out of \",len(unique_lemmas)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -224,7 +233,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "verses = load_verses()\n",
       "tokens = get_tokens(verses)\n",
@@ -233,7 +242,7 @@
       "unique_lemmas = get_unique_lemmas(lemmas)\n",
       "okay_lemmas = get_okay_lemmas()\n",
       "\n",
-      "print \"Currently checked \",len(okay_lemmas),\" of \",len(unique_lemmas)"
+      "print_stats()"
      ],
      "language": "python",
      "metadata": {},
@@ -242,22 +251,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "WARNING: "
-       ]
-      },
-      {
-       "ename": "NameError",
-       "evalue": "global name 'l' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-17-0914c8bc8fde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0munique_lemmas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_unique_lemmas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlemmas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mokay_lemmas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_okay_lemmas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mupdate_okay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mwrite_okay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Currently checked \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mokay_lemmas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\" of \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_lemmas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m<ipython-input-9-1d7a0359711e>\u001b[0m in \u001b[0;36mupdate_okay\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlemmas_to_add\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mokay_lemmas\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0;32mprint\u001b[0m \u001b[0;34m\"WARNING: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\" found in okay_lemmas. Will override.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mokay_lemmas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mNameError\u001b[0m: global name 'l' is not defined"
+        "Currently there are  235  out of  4101\n"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -268,7 +266,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "def update_to_check():\n",
       "    '''\n",
@@ -319,35 +317,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
-      "# update_files()"
+      "update_files()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
