removed many izafats

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:324a3748a99da64876f6b62d179d5a7f265e624397c3484a06ee6c522bbfaab0"
+  "signature": "sha256:ee7eb0ab4f3b7ad54cc391ccc98e064c62a81bbdb96224b2f97544ad66adf2cc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -311,12 +311,12 @@
       "    update_okay() \n",
       "    write_okay()\n",
       "    update_to_check()\n",
-      "                    "
+      "    print_stats()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -326,8 +326,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Currently there are  638  out of  4101\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
