--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e8c4e7531962878bcff5ad20de1842a0edf6f4f0a6cf47d71bda572ddcdd7a9d"
+  "signature": "sha256:f6de7602c78a1a488e69e9fec56cfa4dbd764faf9d5344571203b4b91f2f3d9e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -217,12 +217,12 @@
       "    return [t for t in sorted(unique_tokens.keys()) if not t in okay_lemmas]\n",
       "\n",
       "def print_stats():\n",
-      "    print \"Currently there are \",len(okay_lemmas),\" out of \",len(unique_lemmas)"
+      "    print \"Currently there are \",len(okay_lemmas),\" out of \",len(lemmas)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -251,11 +251,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Currently there are  479  out of  4101\n"
+        "Currently there are  4276  out of  4517\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -332,11 +332,43 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Currently there are  714  out of  4101\n"
+        "Currently there are  4453  out of  4517\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 31
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Concordance Details\n",
+      "\n",
+      "Generates \"output/conc_details.csv\" which lists lemmas and their sources."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lemmas_out = {}\n",
+      "for k,v in okay_lemmas.iteritems(): # k = word; v = lemmas\n",
+      "    for l in v:\n",
+      "        if not l in lemmas_out:\n",
+      "            lemmas_out[l] = []\n",
+      "        lemmas_out[l].append(k)\n",
+      "        lemmas_out[l].sort()\n",
+      "lemmas_out\n",
+      "with open('output/conc_details.csv','w') as f:\n",
+      "    for k,v in lemmas_out.iteritems():\n",
+      "        f.write(k+','+'|'.join(v)+'\\n')\n",
+      "        \n",
+      "#okay_lemmas.keys()[0:100]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
