--- a/input/README
+++ b/input/README
@@ -5,4 +5,6 @@ I have made some adjustments to the verses.csv input file. In addition to a few 
   ((al;aa-al-ra;gm
   
   I need these for izafat locating. Can adjust transliteration.
+  
+  Check ko;nd 136
 
