--- a/input/README
+++ b/input/README
@@ -7,4 +7,5 @@ I have made some adjustments to the verses.csv input file. In addition to a few 
   I need these for izafat locating. Can adjust transliteration.
   
   Check ko;nd 136
+  mihr-baan vs mihrbaan
 
