added graphparser submodule

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0d6a9c2159ac49885057e8f2b51a33059864ebad6e7b44bdc67e640266e35642"
+  "signature": "sha256:8ccd2becefdfeabebc8adc687f870b7e83cba974af77ccb03eb4a4233a96bf3c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -373,7 +373,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 166
     },
     {
      "cell_type": "markdown",
@@ -399,7 +399,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 167
     },
     {
      "cell_type": "code",
@@ -429,7 +429,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 168
     },
     {
      "cell_type": "code",
@@ -441,14 +441,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 169
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "##Statistics\n",
-      "Word frequencies, etc."
+      "Word frequencies, etc.\n",
+      "This is very preliminary.\n",
+      "\n",
+      "output/statistics/izafat-freq.csv is a frequency list of izafats\n",
+      "\n",
+      "output/statistics/uniquetokens-freq.csv is a frequency list of unique tokens\n",
+      "\n",
+      "output/statistics/lemmas-beta-freq.csv is a frequency list of lemmas"
      ]
     },
     {
@@ -470,7 +477,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -482,7 +489,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -502,7 +509,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
