added urdu statistics

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8ccd2becefdfeabebc8adc687f870b7e83cba974af77ccb03eb4a4233a96bf3c"
+  "signature": "sha256:0d6a9c2159ac49885057e8f2b51a33059864ebad6e7b44bdc67e640266e35642"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -373,7 +373,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 166
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -399,7 +399,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 167
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -429,7 +429,7 @@
        ]
       }
      ],
-     "prompt_number": 168
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -441,21 +441,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 169
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "##Statistics\n",
-      "Word frequencies, etc.\n",
-      "This is very preliminary.\n",
-      "\n",
-      "output/statistics/izafat-freq.csv is a frequency list of izafats\n",
-      "\n",
-      "output/statistics/uniquetokens-freq.csv is a frequency list of unique tokens\n",
-      "\n",
-      "output/statistics/lemmas-beta-freq.csv is a frequency list of lemmas"
+      "Word frequencies, etc."
      ]
     },
     {
@@ -477,7 +470,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -489,7 +482,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -509,7 +502,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
