--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0d6a9c2159ac49885057e8f2b51a33059864ebad6e7b44bdc67e640266e35642"
+  "signature": "sha256:d8792f0f633b2742b6497aac7a54edd60d00ee3f5515658df7c3717486e436b0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -482,7 +482,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -502,7 +502,40 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# the following will generate the urdu versions of the statistics (a little slow)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import generate_urdu"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#redo here\n",
+      "reload(generate_urdu)#generate_urdu.write_all_urdu_statistics()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
