lots of updates

--- a/generate_urdu.ipynb
+++ b/generate_urdu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e8624311b8332f1c3d78afb3e3fd6ec7cc2a23915f3b6e4ad1c3042ed9121415"
+  "signature": "sha256:b203bbf7775cc34dc2547dc1d711d8ec171e05e9d464033942d1f7107bffcd0c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,12 +44,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "urdup = graphparser.GraphParser('./settings/urdu.yaml')"
+      "urdup = graphparser.GraphParser('./settings/urdu.yaml')\n",
+      "nagarip = graphparser.GraphParser('./settings/devanagari.yaml')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -59,7 +60,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\u0634\u0627\u0646\u0650 \u0634\u0627\u0646\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -142,26 +152,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def write_urdu_statistics(inputfile,outputfile):\n",
+      "def write_urdu_statistics(inputfile,outputfile,nagari=False):\n",
       "    with open(outputfile,'w') as output_stream:\n",
       "        csvwriter = UnicodeWriter(output_stream)\n",
       "        with open(inputfile,'r') as input_stream:\n",
       "            csvreader = unicode_csv_reader(input_stream) # this is likely not utf-8\n",
       "            for row in csvreader:\n",
       "                (token,freq)=row\n",
-      "                row = urdup.parse(token).output,token,freq\n",
+      "                if nagari==True:\n",
+      "                    row = urdup.parse(token).output,nagarip.parse(token).output,token,freq\n",
       "                csvwriter.writerow(row)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -170,12 +181,14 @@
       "def write_all_urdu_statistics():\n",
       "    write_urdu_statistics('output/statistics/izafat-freq.csv','output/statistics/izafat-freq-ur.csv') # will contain transliteration for now\n",
       "    write_urdu_statistics('output/statistics/lemmas-beta-freq.csv','output/statistics/lemmas-beta-freq-ur.csv')\n",
-      "    write_urdu_statistics('output/statistics/uniquetokens-freq.csv','output/statistics/uniquetokens-freq-ur.csv')"
+      "    write_urdu_statistics('output/statistics/uniquetokens-freq.csv','output/statistics/uniquetokens-freq-ur.csv')\n",
+      "    write_urdu_statistics('output/statistics/izafatastokens-freq.csv','output/statistics/izafatastokens-freq-ur.csv')\n",
+      "    write_urdu_statistics('output/statistics/izafatastokens-freq.csv','output/statistics/izafatastokens-freq-hiur.csv',nagari=True)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -183,6 +196,15 @@
      "input": [
       "write_all_urdu_statistics()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
