--- a/generator.ipynb
+++ b/generator.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ca8ece9f9c0356cafaa2adb57e68fd84c69e23e1a983a08253cf05a6730ebb81"
+  "signature": "sha256:29b81c7019179294e942570efabfba8d17666a7ab488aaf004d9edc04f6af78e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,12 +39,13 @@
      "collapsed": false,
      "input": [
       "import re\n",
-      "from collections import *"
+      "from collections import *\n",
+      "import csv"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 25
     },
     {
      "cell_type": "heading",
@@ -58,17 +59,17 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "verses = {}        # dictionary of verses, e.g. 001.01.0='naqsh faryaadii..'\n",
-      "tokens = {}        # dictionary of tokens where key is verses+.xx, e.g. 001.01.0.01 = 'naqsh'\n",
-      "unique_tokens = {} # dictionary of tokens where value is their count\n",
-      "lemmas = {}        # dictionary of tokens where value is a list of their lemmas\n",
-      "unique_lemmas = [] # dictionary of unique lemmas\n",
-      "okay_lemmas = {}   # dictionary of unique tokens and lists of lemma, e."
+      "verses = {}                      # dictionary of verses, e.g. 001.01.0='naqsh faryaadii..'\n",
+      "tokens = {}                      # dictionary of tokens where key is verses+.xx, e.g. 001.01.0.01 = 'naqsh'\n",
+      "unique_tokens = Counter()        # Counter of tokens where value is their count\n",
+      "lemmas = defaultdict(list)       # dictionary of tokens where value is a list of their lemmas\n",
+      "unique_lemmas = []               # list of unique lemmas\n",
+      "okay_lemmas = defaultdict(list)  # dictionary of unique tokens with lists of lemma, e."
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -90,14 +91,14 @@
       "    returns: verses where verses['ggg.vv.l']=token; where ggg=ghazal #; vv=verse number;l=line number\n",
       "    '''\n",
       "\n",
-      "    import csv\n",
+      "\n",
       "    verses = {}\n",
       "    with open(inputfile,'r') as csvfile:\n",
       "        versereader = csv.reader(csvfile)\n",
       "        for row in versereader:\n",
       "            (verse_id, input_string, real_scan) = row # \n",
-      "            if not 'x' in verse_id: # skip ones with x (not in muravvaj divan)\n",
-      "                verses[verse_id] = input_string.strip()\n",
+      "            if not 'x' in verse_id: # only muravvaj divan for now\n",
+      "                verses[verse_id] = input_string.strip() \n",
       "    return verses\n",
       "\n",
       "def get_okay_lemmas(inputfile='input/okay.csv'):\n",
@@ -149,7 +150,6 @@
       "    match_string: regular expression string (assumes ^,e.g. 'naq')\n",
       "    returns: a list of tokens,e.g. ['naqsh']\n",
       "    '''\n",
-      "    import re\n",
       "    assert unique_tokens\n",
       "    return [k  for k in unique_tokens.keys() if re.match(match_string,k)]\n",
       "\n",
@@ -160,7 +160,6 @@
       "    Input: regular expression string (e.g. 'aqsh'\n",
       "    returns: a list of tokens, e.g. ['naqsh']\n",
       "    '''\n",
-      "    import re\n",
       "    assert unique_tokens\n",
       "    return [k  for k in unique_tokens.keys() if re.search(match_string,k)]\n",
       "\n",
@@ -185,6 +184,7 @@
       "    '''\n",
       "    lemmas = {}\n",
       "\n",
+      "    \n",
       "    for t in unique_tokens.keys():\n",
       "        lemma = t\n",
       "        if re.search(\"-e$\",t):\n",
@@ -206,11 +206,11 @@
       "    lemmas: dictionary keyed by tokens containing lists of lemma, e.g. lemmas['rang-o-buu']=['rang','buu','rang-o-buu']\n",
       "    returns: unique_lemmas as unique_lemmas['lemma']=count\n",
       "    '''\n",
-      "    unique_lemmas = []\n",
+      "    unique_lemmas = set()\n",
       "    for t,t_lemmas in lemmas.iteritems():\n",
       "        for lemma in t_lemmas:\n",
-      "            if not lemma in unique_lemmas:\n",
-      "                unique_lemmas.append(lemma)\n",
+      "            unique_lemmas.add(lemma)\n",
+      "#                unique_lemmas.add(lemma)\n",
       "#            else:\n",
       "#                unique_lemmas[lemma].append(t)\n",
       "    return unique_lemmas\n",
@@ -229,7 +229,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -263,7 +263,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -325,7 +325,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -344,7 +344,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -363,7 +363,7 @@
       "for k,v in okay_lemmas.iteritems(): # k = word; v = lemmas\n",
       "    for l in v:\n",
       "        lemmas_out[l].add(k)\n",
-      "#        lemmas_out[l].sort()\n",
+      "\n",
       "with open('output/conc_details.csv','w') as f:\n",
       "    for k,v in lemmas_out.iteritems():\n",
       "        f.write(k+','+'|'.join(v)+'\\n')\n",
@@ -373,7 +373,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -399,7 +399,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -410,38 +410,47 @@
       "for s in izafat_verses:\n",
       "    x = izafat_re.findall(s)#re.findall(m,s)\n",
       "    for y in x:\n",
-      "        izafats[y]+=1\n",
-      "for w in sorted(izafats)[0:5]:\n",
-      "    print w,izafats[w]"
+      "        izafats[y]+=1\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "((aajiz-e ((ar.z-e yak-af;gaa;n 1\n",
-        "((aalam-e hastii 1\n",
-        "((aalam-e tamkiin-o-.zab:t 1\n",
-        "((aalam-e taqriir 1\n",
-        "((aar-e bistar 1\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": [],
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "with open('output/izafats.csv','w') as f:\n",
-      "    f.write('\\n'.join(sorted(izafats)))"
+      "    f.write('\\n'.join(sorted(izafats.keys())))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here also is a version of the tokens where izafat phrases are treated as individual tokens."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "iast=Counter() # izafats as tokens, along with tokens\n",
+      "iast_re = re.compile('(?:[^ ]+-e )+(?:z )?[^ ]+|[^ ]+')\n",
+      "for i,s in verses.iteritems():\n",
+      "    words = iast_re.findall(s)\n",
+      "    for t in words:\n",
+      "        iast[t]+=1\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -461,28 +470,48 @@
       "    d: dictionary of tokens and values(token: #)\n",
       "    filename = output file name\n",
       "    '''\n",
-      "    by_count = sorted(d, key=d.get, reverse=True)\n",
       "    with open(filename,'w') as f:\n",
-      "        for k in by_count:\n",
-      "            f.write(k+','+str(d[k])+'\\n')\n",
+      "        for k,v in d.most_common():\n",
+      "            f.write(k+','+str(v)+'\\n')\n",
       "            "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "make_csv_of_token_freq(izafats, 'output/statistics/izafat-freq.csv')\n",
-      "make_csv_of_token_freq(unique_tokens, 'output/statistics/uniquetokens-freq.csv')"
+      "make_csv_of_token_freq(unique_tokens, 'output/statistics/uniquetokens-freq.csv')\n",
+      "make_csv_of_token_freq(iast, 'output/statistics/izafatastokens-freq.csv')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type(izafats)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 38,
+       "text": [
+        "collections.Counter"
+       ]
+      }
+     ],
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -502,7 +531,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -513,25 +542,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import generate_urdu"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#redo here\n",
-      "reload(generate_urdu)#generate_urdu.write_all_urdu_statistics()"
      ],
      "language": "python",
      "metadata": {},
@@ -544,15 +561,31 @@
        ]
       },
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 17,
-       "text": [
-        "<module 'generate_urdu' from 'generate_urdu.pyc'>"
+       "ename": "IOError",
+       "evalue": "[Errno 2] No such file or directory: 'output/statistics/izafatsastokens-freq.csv'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-41-6fd5f643b2ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgenerate_urdu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Users/seanpue/ghalib-concordance/generate_urdu.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[0;31m# <codecell>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m \u001b[0mwrite_all_urdu_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/seanpue/ghalib-concordance/generate_urdu.py\u001b[0m in \u001b[0;36mwrite_all_urdu_statistics\u001b[0;34m()\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0mwrite_urdu_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'output/statistics/lemmas-beta-freq.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'output/statistics/lemmas-beta-freq-ur.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0mwrite_urdu_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'output/statistics/uniquetokens-freq.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'output/statistics/uniquetokens-freq-ur.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m     \u001b[0mwrite_urdu_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'output/statistics/izafatsastokens-freq.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'output/statistics/uniquetokens-freq-ur.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[0;31m# <codecell>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/seanpue/ghalib-concordance/generate_urdu.py\u001b[0m in \u001b[0;36mwrite_urdu_statistics\u001b[0;34m(inputfile, outputfile)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_stream\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m         \u001b[0mcsvwriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUnicodeWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_stream\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0minput_stream\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m             \u001b[0mcsvreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0municode_csv_reader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_stream\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# this is likely not utf-8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcsvreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'output/statistics/izafatsastokens-freq.csv'"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#redo here\n",
+      "reload(generate_urdu)#generate_urdu.write_all_urdu_statistics()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
